third_party/move/move-compiler-v2/tests/checking/typing/binary_shl.exp

Diagnostics:
error: no matching declaration of `<<`
   ┌─ tests/checking/typing/binary_shl.move:15:9
   │
15 │         copy x << copy b;
   │         ^^^^^^^^^^^^^^^^
   │
   = outruled candidate `<<(u8, u8): u8` (expected `u8` but found `u64` for argument 1)
   = outruled candidate `<<(u16, u16): u16` (expected `u16` but found `u64` for argument 1)
   = outruled candidate `<<(u32, u32): u32` (expected `u32` but found `u64` for argument 1)
   = outruled candidate `<<(u64, u64): u64` (expected `u64` but found `u8` for argument 2)
   = outruled candidate `<<(u128, u128): u128` (expected `u128` but found `u64` for argument 1)
   = outruled candidate `<<(u256, u256): u256` (expected `u256` but found `u64` for argument 1)

error: no matching declaration of `<<`
   ┌─ tests/checking/typing/binary_shl.move:16:9
   │
16 │         r.f << r.b;
   │         ^^^^^^^^^^
   │
   = outruled candidate `<<(u8, u8): u8` (expected `u8` but found `u64` for argument 1)
   = outruled candidate `<<(u16, u16): u16` (expected `u16` but found `u64` for argument 1)
   = outruled candidate `<<(u32, u32): u32` (expected `u32` but found `u64` for argument 1)
   = outruled candidate `<<(u64, u64): u64` (expected `u64` but found `u8` for argument 2)
   = outruled candidate `<<(u128, u128): u128` (expected `u128` but found `u64` for argument 1)
   = outruled candidate `<<(u256, u256): u256` (expected `u256` but found `u64` for argument 1)
